--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.4",
+    "react-simple-snackbar": "^1.1.10",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
